Avoid truncation, use jpg for README

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-![Complex automata](https://github.com/jaybutera/wolfram_automaton/blob/master/complexity.bmp)
+![Complex automata](https://github.com/jaybutera/wolfram_automaton/blob/master/complexity.jpg)
